@@ -206,6 +206,10 @@ mpls9      MPLS label 9
 mpls10     MPLS label 10
 .br
 router     Exporting router IP
+.br
+xsrcip     X-late source IP address, if compiled with NSEL support
+.br
+xdstip     X-late destination IP address, if compiled with NSEL support
 .RE
 .RS 3
 .P
